Prevent email from overflowing in the master seat

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -764,6 +764,7 @@
     height: 69px;
     width: 147px;
     border: 0px;
+    overflow: hidden;
 }
 
 .cardstories_master_seat.owner {
